--- a/SolidsHoleOperationPresets/SHOP.csproj
+++ b/SolidsHoleOperationPresets/SHOP.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{DA1DC8C4-49E8-4892-8FD2-D4CBD590C3F3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SolidsHoleOperationPresets</RootNamespace>
+    <RootNamespace>SHOP</RootNamespace>
     <AssemblyName>SHOP</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -64,7 +64,7 @@
       <HintPath>..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
     </Reference>
     <Reference Include="NETHook3_0">
-      <HintPath>F:\Program Files\Mcam2017\NETHook3_0.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Mastercam 2020\Mastercam\NETHook3_0.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -110,6 +110,7 @@
       <DependentUpon>AppStrings.resx</DependentUpon>
     </Compile>
     <Compile Include="Main.cs" />
+    <Compile Include="MastercamPaths.cs" />
     <Compile Include="Models\Result.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\FileBrowserService.cs" />
@@ -118,16 +119,14 @@
     <Compile Include="Services\ISerializationService.cs" />
     <Compile Include="Services\SerializationManager.cs" />
     <Compile Include="Services\SerializationService.cs" />
-    <Compile Include="ViewModels\ShellViewModel.cs" />
-    <Compile Include="Views\Shell.xaml.cs">
-      <DependentUpon>Shell.xaml</DependentUpon>
+    <Compile Include="ViewModels\ShellViewViewModel.cs" />
+    <Compile Include="Views\ShellView.xaml.cs">
+      <DependentUpon>ShellView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="FunctionTable\Assets\Run16.png" />
     <Content Include="FunctionTable\Assets\Run24.png" />
-    <Content Include="ReadMeFirst\customize.png" />
-    <Content Include="ReadMeFirst\ReadMeFirst.txt" />
     <Content Include="Resources\Entypo-license.txt" />
     <Content Include="Resources\WindowsIcons-license.txt" />
     <Content Include="SampleData\SolidsHoleOperationPresets.xml" />
@@ -138,8 +137,6 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="packages.config" />
-    <None Include="ReadMeFirst\ProjectSetup.docx" />
-    <None Include="ReadMeFirst\ProjectSetup.pdf" />
     <None Include="Resources\Entypo.ttf" />
     <AdditionalFiles Include="stylecop.json" />
   </ItemGroup>
@@ -166,7 +163,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Views\Shell.xaml">
+    <Page Include="Views\ShellView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -178,7 +175,15 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "F:\Program Files\mcam2017\chooks\SHOP\$(TargetFileName)"
-copy "$(ProjectDir)FunctionTable\$(TargetName).ft" "F:\Program Files\mcam2017\chooks\$(TargetName).ft"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetPath)" "C:\Program Files\Mastercam 2020\Mastercam\chooks\SHOP\$(TargetFileName)"
+copy "$(ProjectDir)FunctionTable\$(TargetName).ft" "C:\Program Files\Mastercam 2020\Mastercam\chooks\$(TargetName).ft"
+copy "$(TargetDir)MahApps.Metro.dll" "C:\Program Files\Mastercam 2020\Mastercam\chooks\SHOP\MahApps.Metro.dll"
+copy "$(TargetDir)Microsoft.Practices.ServiceLocation.dll" "C:\Program Files\Mastercam 2020\Mastercam\chooks\SHOP\Microsoft.Practices.ServiceLocation.dll"
+copy "$(TargetDir)Microsoft.Practices.Unity.Configuration.dll" "C:\Program Files\Mastercam 2020\Mastercam\chooks\SHOP\Microsoft.Practices.Unity.Configuration.dll"
+copy "$(TargetDir)Microsoft.Practices.Unity.dll" "C:\Program Files\Mastercam 2020\Mastercam\chooks\SHOP\Microsoft.Practices.Unity.dll"
+copy "$(TargetDir)Microsoft.Practices.Unity.RegistrationByConvention.dll" "C:\Program Files\Mastercam 2020\Mastercam\chooks\SHOP\Microsoft.Practices.Unity.RegistrationByConvention.dll"
+copy "$(TargetDir)Prism.dll" "C:\Program Files\Mastercam 2020\Mastercam\chooks\SHOP\Prism.dll"
+copy "$(TargetDir)Prism.Unity.Wpf.dll" "C:\Program Files\Mastercam 2020\Mastercam\chooks\SHOP\Prism.Unity.Wpf.dll"
+copy "$(TargetDir)Prism.Wpf.dll" "C:\Program Files\Mastercam 2020\Mastercam\chooks\SHOP\Prism.Wpf.dll"</PostBuildEvent>
   </PropertyGroup>
 </Project>
